# support-sphere

./: .gitignore  Dockerfile  README.md  Readme.md  Walkthrough.md  inference.py  openenv.yaml  pyproject.toml
examples/: trajectory_easy.json  trajectory_hard.json  trajectory_medium.json
server/: app.py
supportsphere/: __init__.py  client.py  graders.py  models.py
supportsphere/server/: __init__.py  app.py  knowledge_base.json  supportsphere_environment.py
