[project]
name = "supportsphere"
version = "1.0.0"
requires-python = ">=3.10"
description = "SupportSphere — Real-world EdTech customer support simulator for autonomous AI agent evaluation"
dependencies = [
    "openenv-core>=0.2.1",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "openai",
    "requests",
    "python-dotenv",
]

[project.scripts]
openenv = "openenv.cli:main"
server = "server.app:main"

[tool.uv]
dev-dependencies = ["pytest", "httpx"]

